fix(text-center): added correct spacing and naming

--- a/components/text-center/text-center.less
+++ b/components/text-center/text-center.less
@@ -8,6 +8,13 @@
     }
 }
 
+.text-center-spacing-small {
+    margin-bottom: 60px;
+    @media @screen-small {
+        margin-bottom: 80px;
+    }
+}
+
 .text-center .container-inner {
     max-width: @column-small-4;
     @media @screen-medium {
@@ -39,10 +46,6 @@
 		line-height: 44px;
 		font-size: @text-medium-l;
 	}
-}
-
-.text-center-spacing-large {
-    margin-bottom: 80px;
 }
 
 .text-center-font-medium p {
